# NoPubSearchCrawler

./: .gitignore  CLAUDE.md  pyproject.toml
assets/start_url_lists/: start_urls.json
config_files/: crawler_config.yaml
configs/: crawler_config.yaml
src/: crawlers.py
src/apps/crawler_tui/: crawler_tui.tcss  i18n_setup.py  logging_setup.py  main.py  tui.py
src/apps/crawler_tui/locales/en/: main.ftl
src/apps/crawler_tui/locales/fr/: main.ftl
src/backups/: crawlers_backup_2.py
src/common/: base_config.py  errors.py  paths.py
src/configs/: base_config.py  crawler_config.py
src/crawler/: bootstrap.py  engine.py  errors.py  log_levels.py  main.py  managers.py
src/crawler/backups/: crawlers_backup_1.py  crawlers_backup_2.py
src/crawlers/: crawler_config.py  crawlers.py  errors.py  managers.py
src/crawlers/backups/: crawlers_backup_1.py
src/database/: model.py  session.py
