[project]
name = "nopubsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "protego>=0.6.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rbloom>=1.5.4",
    "requests>=2.34.2",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.51",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]

[tool.deptry]
exclude = [
    "src/backups"
]
